baitap_gioithieucongty_dropdown

--- a/test_gioithieucongty/gioithieucongty.html
+++ b/test_gioithieucongty/gioithieucongty.html
@@ -35,11 +35,28 @@
             <ul>
                 <li><a href="#" class="active_page"><p>Trang chủ</p></a></li>
                 <li><a href="#"><p>Giới thiệu</p></a></li>
-                <li><a href="#"><p>Sản phẩm</p></a></li>
-
+                <li class="dropdown"><a href="#"><p>Sản phẩm &darr;</p></a>
+                    <div class="dropdown_content" id="sanpham">
+                        <a href="#">Lorem, ipsum dolor.</a>
+                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem, ipsum.</a>
+                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem, ipsum dolor.</a>
+                    </div>
+                </li>
                 <li><a href="#"><p>Dự án</p></a></li>
                 <li><a href="#"><p>Dịch vụ</p></a></li>
-                <li><a href="#"><p>Tin tức</p></a></li>
+                <li class="dropdown"><a href="#"><p>Tin tức &darr;</p></a>
+                    <div class="dropdown_content" id="tintuc">
+                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem, ipsum dolor.</a>
+                        <a href="#">Lorem, ipsum.</a>
+                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem, ipsum dolor.</a>
+                    </div>
+                </li>
             </ul>
             <a href="#" id="contact"><p>Liên hệ</p></a>
         </menu>
