gioithieucongty_sticky_menu

--- a/test_gioithieucongty/gioithieucongty.html
+++ b/test_gioithieucongty/gioithieucongty.html
@@ -30,7 +30,7 @@
             </a>
         </div>
     </header>
-    <div class="menu_container">
+    <div class="menu_container_sticky">
         <menu>
             <ul>
                 <li><a href="#" class="active_page"><p>Trang chủ</p></a></li>
