--- a/web_clone/tonyrobbins/tonyrobbins.html
+++ b/web_clone/tonyrobbins/tonyrobbins.html
@@ -5,44 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/tonyrobbins.css">
-    <title>Tony Robbins - Clone.practice</title>
+    <title>Tony Robbins_Clone_practice</title>
 </head>
 <body>
-    <div class="heading">
-        <div class="contact_bar">
-            <div class="phone">
-                <a href="#"><p>0123.456.789</p></a>
+    <header class="sticky">
+        <div class="header_social">
+            <div class="social_container">
+                <div class="phone">
+                    <a href="#"><p>0123.456.789</p></a>
+                </div>
+                <div class="social_channel">
+                    <a href="#"><div class="icon fb_icon"></div></a>
+                    <a href="#"><div class="icon tweet_icon"></div></a>
+                    <a href="#"><div class="icon linkedin_icon"></div></a>
+                    <a href="#"><div class="icon insta_icon"></div></a>
+                </div>
             </div>
-            <div class="social_media">
-                <a href="#"><div class="icon fb_icon"></div></a>
-                <a href="#"><div class="icon tweet_icon"></div></a>
-                <a href="#"><div class="icon linkedin_icon"></div></a>
-                <a href="#"><div class="icon insta_icon"></div></a>
+            <div class="login_btn">
+                <a href="#"><p>Login</p></a>
             </div>
         </div>
-        <div class="login_btn">
-            <a href="#"><p>Login</p></a>
-        </div>
-    </div>
-    <header>
-        <a href="#"><h1>Tony Robbins</h1></a>
+
         <menu>
+            <a href="#"><h1>Tony Robbins</h1></a>
             <ul>
                 <li class="dropdown">
                     <p>Help me with &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum.</a>
+                        <a href="#">Lorem ipsum dolor.</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
                 <li class="dropdown">
                     <p>Mission &darr;</p>
                     <div class="drop_list">
+                        <a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum.</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
@@ -58,9 +59,9 @@
                 <li class="dropdown">
                     <p>Experiences &darr;</p>
                     <div class="drop_list">
+                        <a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, qui?</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempora ratione et.</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
@@ -68,29 +69,30 @@
                     <p>Coaching &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum dolor.</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                     </div>
                 </li>
                 <li class="dropdown">
                     <p>Resources &darr;</p>
                     <div class="drop_list">
+                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing.</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
-                        <a href="#">Lorem ipsum dolor sit amet.</a>
+                        <a href="#">Lorem ipsum dolor sit.</a>
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
             </ul>
+            <div class="search_icon"></div>
         </menu>
-        <div class="search_icon"></div>
     </header>
-    <section class="coverpic">
+
+    <section class="cover_img">
         <h2>Ignite your life</h2>
         <p>YOUR JOURNEY TO UNLEASHING YOUR FULL POTENTIAL STARTS AT UNLEASH THE POWER WITHIN</p>
         <a href="#">
-            <div class="saveyourspot">
+            <div class="saveyourspot_btn">
                 <p>Save your spot</p>
             </div>
         </a>
@@ -106,13 +108,14 @@
             <div class="com" id="com4"></div>
         </div>
     </section>
+
     <section class="mission">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis mollitia voluptatum doloremque dolorum quibusdam nihil. Inventore delectus doloremque laborum voluptate libero vel distinctio quia cumque nobis aliquam nostrum temporibus consequuntur, qui neque sed ea consequatur laboriosam maiores dicta facilis earum in! Iure commodi pariatur non hic soluta iusto vero quod facilis exercitationem veritatis. Architecto repellat, esse et magni laborum ut. Enim cupiditate vitae, ducimus rem distinctio numquam, ab commodi consequatur in quae explicabo ut praesentium perferendis dolores. Nihil, labore doloremque mollitia a autem possimus eaque quia natus alias delectus totam est fugit inventore cum voluptates maxime illum consectetur libero temporibus?</p>
     </section>
-    <section class="area_master">
-        <div class="heading_master">
+    <section class="category_container">
+        <div class="category_header">
             <h2>Master every area of your life</h2>
-            <p>Solution to fit your time, your lifestyle and your budget</p>
+            <p class="category_intro">Solution to fit your time, your lifestyle and your budget</p>
         </div>
         <div class="thumbnail_container">
             <a href="#"><div class="thumbnail" id="thumb1">
