--- a/web_clone/tonyrobbins/tonyrobbins_home.html
+++ b/web_clone/tonyrobbins/tonyrobbins_home.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/tonyrobbins.css">
-    <title>Tony Robbins_Clone_practice</title>
+    <link rel="stylesheet" href="css/tonyrobbins_home.css">
+    <title>Tony Robbins_clone_practice</title>
 </head>
 <body>
     <header class="sticky">
