--- a/00_index/index.html
+++ b/00_index/index.html
@@ -112,7 +112,7 @@
 
     </div>
     <div class="footer">
-        <p>-- Đây là footer --</p>
+        <a href="https://github.com/vanvu25894/02-HTML" target="_blank">Github link</a>
     </div>
 </body>
 </html>
