--- a/00_index/index.html
+++ b/00_index/index.html
@@ -15,29 +15,10 @@
         
         <div class="item-container web-clone">
             <h2 class="item-container-header">Web Clone</h2>
-            <div class="item">
-                <ul>
-                    <p class="date">No date</p>
-                    <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/test_gioithieucongty/gioithieucongty.html" target="_blank">
-                            <h3>Giới thiệu công ty</h3>
-                            <p class="note">HTML/CSS, no JavaScript</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="item">
-                <ul>
-                    <p class="date">No date</p>
-                    <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/web_clone/tonyrobbins/tonyrobbins_home.html" target="_blank">
-                            <h3>Clone - tonyrobbins.com</h3>
-                            <p class="note">HTML/CSS, no JavaScript</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="item">
+
+            
+
+            <div class="item" id="web-clone-3">
                 <p class="date">18/02/2020</p>
                 <ul>
                     <li>
@@ -48,44 +29,36 @@
                     </li>
                 </ul>
             </div>
+            <div class="item" id="web-clone-2">
+                <ul>
+                    <p class="date">No date</p>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/web_clone/tonyrobbins/tonyrobbins_home.html" target="_blank">
+                            <h3>Clone - tonyrobbins.com</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="item" id="web-clone-1">
+                <ul>
+                    <p class="date">No date</p>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/test_gioithieucongty/gioithieucongty.html" target="_blank">
+                            <h3>Giới thiệu công ty</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <div class="item-container bai-tap">
             <h2 class="item-container-header">Bài tập thực hành</h2>
-            <div class="item">
-                <p class="date">26/01/2020</p>
-                <ul>
-                    <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0126/gioithieu.html" target="_blank">
-                            <h3>Giới thiệu bản thân</h3>
-                            <p class="note">HTML/CSS, no JavaScript</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="item">
-                <p class="date">28/01/2020</p>
-                <ul>
-                    <li>
-                        <a href="http://vungocvan-aptech.herokuapp.com/0128/vincent.html" target="_blank">
-                            <h3>Vincent State School</h3>
-                            <p class="note">HTML/CSS, no JavaScript</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="item">
-                <p class="date">28/01/2020</p>
-                <ul>
-                    <li>
-                        <a href="http://vungocvan-aptech.herokuapp.com/0130/EmailEditor.html" target="_blank">
-                            <h3>Email Editor</h3>
-                            <p class="note">HTML/CSS, no JavaScript</p>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-            <div class="item">
+
+
+
+            <div class="item" id="bai-tap-4">
                 <p class="date">18/02/2020</p>
                 <ul>
                     <li>
@@ -103,6 +76,39 @@
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/0218/khotruyen-clone.html" target="_blank">
                             <h3>Clone - khotruyen.net</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="item" id="bai-tap-3">
+                <p class="date">28/01/2020</p>
+                <ul>
+                    <li>
+                        <a href="http://vungocvan-aptech.herokuapp.com/0130/EmailEditor.html" target="_blank">
+                            <h3>Email Editor</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="item" id="bai-tap-2">
+                <p class="date">28/01/2020</p>
+                <ul>
+                    <li>
+                        <a href="http://vungocvan-aptech.herokuapp.com/0128/vincent.html" target="_blank">
+                            <h3>Vincent State School</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="item" id="bai-tap-1">
+                <p class="date">26/01/2020</p>
+                <ul>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/0126/gioithieu.html" target="_blank">
+                            <h3>Giới thiệu bản thân</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
                     </li>
