--- a/00_index/index.html
+++ b/00_index/index.html
@@ -10,6 +10,7 @@
     <div class="header">
         <h1>Bài tập thực hành</h1>
         <p>Vũ Ngọc Văn</p>
+        <p>Aptech LTN - C2010L</p>
     </div>
     <div class="section main-container">
         
