--- a/00_index/index.html
+++ b/00_index/index.html
@@ -18,7 +18,6 @@
             <h2 class="item-container-header">Web Clone</h2>
 
             
-
             <div class="item" id="web-clone-3">
                 <p class="date">18/02/2020</p>
                 <ul>
@@ -58,7 +57,29 @@
             <h2 class="item-container-header">Bài tập thực hành</h2>
 
 
-
+            <div class="item" id="bai-tap-5">
+                <p class="date">23/02/2020</p>
+                <ul>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/0218/ex1-login.html" target="_blank">
+                            <h3>Event - JS</h3>
+                            <p class="note">HTML/CSS/JS</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/0218/ex2-library.html" target="_blank">
+                            <h3>Form - Library</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/0218/khotruyen-clone.html" target="_blank">
+                            <h3>Clone - khotruyen.net</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div class="item" id="bai-tap-4">
                 <p class="date">18/02/2020</p>
                 <ul>
