--- a/00_index/index.html
+++ b/00_index/index.html
@@ -61,7 +61,7 @@
                 <p class="date">23/02/2020</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0218/ex1-login.html" target="_blank">
+                        <a href="https://vungocvan-aptech.herokuapp.com/0223_js/bai3-event-phuongtrinhbacnhat.html" target="_blank">
                             <h3>Event - JS</h3>
                             <p class="note">HTML/CSS/JS</p>
                         </a>
