--- a/00_index/index.html
+++ b/00_index/index.html
@@ -62,7 +62,7 @@
                 <ul>
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/0223_js/bai3-event-phuongtrinhbacnhat.html" target="_blank">
-                            <h3>Event - JS</h3>
+                            <h3>JS - Event -  PT bậc 1</h3>
                             <p class="note">HTML/CSS/JS</p>
                         </a>
                     </li>
