--- a/0223_js/bai3-event-phuongtrinhbacnhat.html
+++ b/0223_js/bai3-event-phuongtrinhbacnhat.html
@@ -20,8 +20,8 @@
             <button type="button" onclick="reset()" class="alert-none">Reset</button>
         </div>
 
-        <!-- <h2 class="alert-box" id="alert-text">Hãy nhập lại giá trị!</h2> -->
-        <!-- <h2 class="alert-box" id="alert-text-ok">OK. Hãy nhấn "In kết quả"</h2> -->
+        <h2 class="alert-box" id="alert-text">Hãy nhập lại giá trị!</h2>
+        <h2 class="alert-box" id="alert-text-ok">OK. Hãy nhấn "In kết quả"</h2>
     </div>
 
 </body>
