--- a/web_clone/tonyrobbins/tonyrobbins_home.html
+++ b/web_clone/tonyrobbins/tonyrobbins_home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link rel="stylesheet" href="css/tonyrobbins_home_backup.css"> -->
     <link rel="stylesheet" href="css/tonyrobbins_home.css">
     <title>Tony Robbins_clone_practice</title>
 </head>
@@ -27,9 +28,9 @@
         </div>
 
         <menu>
-            <a href="#"><h1>Tony Robbins</h1></a>
-            <ul>
-                <li class="dropdown">
+            <a href="#" class="menu_header menu_element"><h1>Tony Robbins</h1></a>
+            <ul class="menu_main menu_element">
+                <li class="menu_item dropdown">
                     <p>Help me with &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor sit amet.</a>
@@ -38,7 +39,7 @@
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
-                <li class="dropdown">
+                <li class="menu_item dropdown">
                     <p>Mission &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing.</a>
@@ -47,7 +48,7 @@
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
-                <li class="dropdown">
+                <li class="menu_item dropdown">
                     <p>Store &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor sit amet.</a>
@@ -56,7 +57,7 @@
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
-                <li class="dropdown">
+                <li class="menu_item dropdown">
                     <p>Experiences &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, qui?</a>
@@ -65,7 +66,7 @@
                         <a href="#">Lorem ipsum dolor sit amet.</a>
                     </div>
                 </li>
-                <li class="dropdown">
+                <li class="menu_item dropdown">
                     <p>Coaching &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor sit amet.</a>
@@ -74,7 +75,7 @@
                         <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
                     </div>
                 </li>
-                <li class="dropdown">
+                <li class="menu_item dropdown">
                     <p>Resources &darr;</p>
                     <div class="drop_list">
                         <a href="#">Lorem ipsum dolor sit amet, consectetur adipisicing.</a>
@@ -84,28 +85,31 @@
                     </div>
                 </li>
             </ul>
-            <div class="search_icon"></div>
+            <div class="search_icon menu_element">
+                <div class="search_fake_icon"></div>
+            </div>
         </menu>
     </header>
 
     <section class="cover_img">
-        <h2>Ignite your life</h2>
-        <p>YOUR JOURNEY TO UNLEASHING YOUR FULL POTENTIAL STARTS AT UNLEASH THE POWER WITHIN</p>
-        <a href="#">
-            <div class="saveyourspot_btn">
+        <div class="fake_cover_img"></div>
+        <div class="cover_img_text">
+            <h2>Ignite your life</h2>
+            <p>YOUR JOURNEY TO UNLEASHING YOUR FULL POTENTIAL STARTS AT UNLEASH THE POWER WITHIN</p>
+            <a href="#" class="saveyourspot_btn">
                 <p>Save your spot</p>
-            </div>
-        </a>
+            </a>
+        </div>
     </section>
     <section class="featured_in">
         <div class="heading_featured">
             <p>Featured in</p>
         </div>
         <div class="com_container">
-            <div class="com" id="com1"></div>
-            <div class="com" id="com2"></div>
-            <div class="com" id="com3"></div>
-            <div class="com" id="com4"></div>
+            <div class="com_icon" id="com1"></div>
+            <div class="com_icon" id="com2"></div>
+            <div class="com_icon" id="com3"></div>
+            <div class="com_icon" id="com4"></div>
         </div>
     </section>
 
@@ -119,24 +123,100 @@
         </div>
         <div class="thumbnail_container">
             <a href="#"><div class="thumbnail" id="thumb1">
-                <p>upcoming events</p>
+                <div class="thumbnail_fake_img"></div>
+                <p class="thumbnail_text">upcoming events</p>
             </div></a>
-            <a href="#"><div class="thumbnail" id="thumb2">
-                <p>private coaching</p>
+            <a href="#"><div class="thumbnail" id="thumb1">
+                <div class="thumbnail_fake_img"></div>
+                <p class="thumbnail_text">private coaching</p>
             </div></a>
-            <a href="#"><div class="thumbnail" id="thumb3">
-                <p>exclusive retreats</p>
+            <a href="#"><div class="thumbnail" id="thumb1">
+                <div class="thumbnail_fake_img"></div>
+                <p class="thumbnail_text">exclusive retreats</p>
             </div></a>
-            <a href="#"><div class="thumbnail" id="thumb4">
-                <p>training programs</p>
+            <a href="#"><div class="thumbnail" id="thumb1">
+                <div class="thumbnail_fake_img"></div>
+                <p class="thumbnail_text">training programs</p>
             </div></a>
-            <a href="#"><div class="thumbnail" id="thumb5">
-                <p>supplements</p>
+            <a href="#"><div class="thumbnail" id="thumb1">
+                <div class="thumbnail_fake_img"></div>
+                <p class="thumbnail_text">supplements</p>
             </div></a>
-            <a href="#"><div class="thumbnail" id="thumb6">
-                <p>platinum partnership</p>
+            <a href="#"><div class="thumbnail" id="thumb1">
+                <div class="thumbnail_fake_img"></div>
+                <p class="thumbnail_text">platinum partnership</p>
             </div></a>
         </div>
     </section>
+
+
+
+
+    <footer>
+        <div class="footer_main footer_element">
+            <div class="company_info">
+                <div class="company_name">
+                    <h3>ROBBINS RESEARCH<br>INTERNATIONAL, INC.</h3>
+                </div>
+                <div class="company_address">
+                    <p>9051 Mira Mesa Blvd P.O. Box 261229<br>San Diego, CA 92196</p>
+                </div>
+                <div class="social_media">
+                    <div class="social_media_header">
+
+                    </div>
+                    <div class="social_media_icon">
+                        <div class="media_fake_icon" id="facebook"></div>
+                        <div class="media_fake_icon" id="twitter"></div>
+                        <div class="media_fake_icon" id="linkedin"></div>
+                        <div class="media_fake_icon" id="youtube"></div>
+                        <div class="media_fake_icon" id="podcast"></div>
+                        <div class="media_fake_icon" id="insta"></div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="quick_link">
+
+                    <a href="#">Sitemap</a>
+                    <a href="#">Careers</a>
+                    <a href="#">Terms</a>
+                    <a href="#">Policies</a>
+                    <a href="#">Return Policy</a>
+                    <a href="#">Affiliates</a>
+                    <a href="#">DISC Assessment</a>
+                    <a href="#">Firewalk</a>
+                    <a href="#">Crew Program</a>
+
+            </div>
+            <div class="contact">
+                <div class="media_inquiries">
+                    <div class="inquiries_header">
+                        <h3>Media Inquiries</h3>
+                    </div>
+                    <div class="inquiries_text">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem atque modi aspernatur nam sint ab ut laboriosam voluptate excepturi dicta.</p>
+                    </div>
+                </div>
+                <div class="support">
+                    <div class="support_header">
+                        <h3>Customer Support</h3>
+                    </div>
+                    <div class="support_text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, cum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer_ext_link footer_element">
+            <h3>Also of interest</h3>
+            <a href="#">Smart Goals</a>
+            <a href="#">Nepotism</a>
+            <a href="#">Quotes For Success</a>
+        </div>
+    </footer>
+    <div class="copyright_statement">
+        <p>© 2021 Lorem ipsum dolor sit amet. Lorem, ipsum dolor.</p>
+    </div>
 </body>
 </html>
