--- a/00_index/index.html
+++ b/00_index/index.html
@@ -35,7 +35,7 @@
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/web_clone/tonyrobbins/tonyrobbins_home.html" target="_blank">
                             <h3>Clone - tonyrobbins.com</h3>
-                            <p class="note">HTML/CSS, no JavaScript</p>
+                            <p class="note">HTML/CSS, no JavaScript, responsive</p>
                         </a>
                     </li>
                 </ul>
