--- a/00_index/index.html
+++ b/00_index/index.html
@@ -56,6 +56,17 @@
         <div class="item-container bai-tap">
             <h2 class="item-container-header">Bài tập thực hành</h2>
 
+            <div class="item">
+                <p class="date">27/02/2020</p>
+                <ul>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/0227/payment_form.html" target="_blank">
+                            <h3>JS - Payment Form</h3>
+                            <p class="note">HTML/CSS/JS</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
 
             <div class="item" id="bai-tap-5">
                 <p class="date">23/02/2020</p>
