--- a/00_index/index.html
+++ b/00_index/index.html
@@ -17,9 +17,19 @@
         <div class="item-container web-clone">
             <h2 class="item-container-header">Web Clone</h2>
 
-            
+            <div class="item" id="web-clone-4">
+                <p class="date">01/03/2021</p>
+                <ul>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/web_clone/nlpkhaisang/nlpkhaisang.html" target="_blank">
+                            <h3>Clone - nlpkhaisang.com</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div class="item" id="web-clone-3">
-                <p class="date">18/02/2020</p>
+                <p class="date">18/02/2021</p>
                 <ul>
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/0218/khotruyen-clone.html" target="_blank">
@@ -57,7 +67,7 @@
             <h2 class="item-container-header">Bài tập thực hành</h2>
 
             <div class="item">
-                <p class="date">27/02/2020</p>
+                <p class="date">27/02/2021</p>
                 <ul>
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/0227/payment_form.html" target="_blank">
@@ -69,7 +79,7 @@
             </div>
 
             <div class="item" id="bai-tap-5">
-                <p class="date">23/02/2020</p>
+                <p class="date">23/02/2021</p>
                 <ul>
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/0223_js/bai3-event-phuongtrinhbacnhat.html" target="_blank">
@@ -80,7 +90,7 @@
                 </ul>
             </div>
             <div class="item" id="bai-tap-4">
-                <p class="date">18/02/2020</p>
+                <p class="date">18/02/2021</p>
                 <ul>
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/0218/ex1-login.html" target="_blank">
@@ -103,7 +113,7 @@
                 </ul>
             </div>
             <div class="item" id="bai-tap-3">
-                <p class="date">30/01/2020</p>
+                <p class="date">30/01/2021</p>
                 <ul>
                     <li>
                         <a href="http://vungocvan-aptech.herokuapp.com/0130/EmailEditor.html" target="_blank">
@@ -114,7 +124,7 @@
                 </ul>
             </div>
             <div class="item" id="bai-tap-2">
-                <p class="date">28/01/2020</p>
+                <p class="date">28/01/2021</p>
                 <ul>
                     <li>
                         <a href="http://vungocvan-aptech.herokuapp.com/0128/vincent.html" target="_blank">
@@ -125,7 +135,7 @@
                 </ul>
             </div>
             <div class="item" id="bai-tap-1">
-                <p class="date">26/01/2020</p>
+                <p class="date">26/01/2021</p>
                 <ul>
                     <li>
                         <a href="https://vungocvan-aptech.herokuapp.com/0126/gioithieu.html" target="_blank">
