--- a/web_clone/nlpkhaisang_remake/nlpkhaisang_remake.html
+++ b/web_clone/nlpkhaisang_remake/nlpkhaisang_remake.html
@@ -81,10 +81,10 @@
                 <h2>Khóa học NLP Cơ bản</h2>
             </div>
         </div>
-        <div class="featured_thumb" id="featured_co_ban">
+        <div class="featured_thumb" id="featured_online">
             <div class="thumb_intro">
                 <div class="thumb_img pop_up">
-                    <img src="img/home/featured_co_ban.jpg" alt="">
+                    <img src="img/home/featured_online.jpg" alt="">
                 </div>
                 <div class="thumb_deco">
                     <div class="thumb_deco_icon">
@@ -92,19 +92,19 @@
                     </div>
                 </div>
                 <div class="thumb_txt pop_up">
-                    <p>Dành cho người mới, muốn tìm hiểu về NLP và ứng dụng NLP vào phát triển kinh doanh, thay đổi cuộc sống</p>
+                    <p>Các khóa học online từ Th.S Vũ Ngọc Hoa. Bạn có thể học tùy thích vô hạn lần chỉ với một mức phí duy nhất</p>
                     <a href="#" class="btn_link">Xem các khóa học</a>
                 </div>
             </div>
             <div class="thumb_heading">
-                <p>Cơ bản</p>
-                <h2>Khóa học NLP Cơ bản</h2>
+                <p>Ít thời gian</p>
+                <h2>Khóa học Online</h2>
             </div>
         </div>
-        <div class="featured_thumb" id="featured_co_ban">
+        <div class="featured_thumb" id="featured_chuyen_sau">
             <div class="thumb_intro">
                 <div class="thumb_img pop_up">
-                    <img src="img/home/featured_co_ban.jpg" alt="">
+                    <img src="img/home/featured_chuyen_sau.jpg" alt="">
                 </div>
                 <div class="thumb_deco">
                     <div class="thumb_deco_icon">
@@ -112,13 +112,13 @@
                     </div>
                 </div>
                 <div class="thumb_txt pop_up">
-                    <p>Dành cho người mới, muốn tìm hiểu về NLP và ứng dụng NLP vào phát triển kinh doanh, thay đổi cuộc sống</p>
+                    <p>Các khóa Coaching của Th.S Vũ Ngọc Hoa và các Master Coach</p>
                     <a href="#" class="btn_link">Xem các khóa học</a>
                 </div>
             </div>
             <div class="thumb_heading">
-                <p>Cơ bản</p>
-                <h2>Khóa học NLP Cơ bản</h2>
+                <p>Nâng cao</p>
+                <h2>Khóa học NLP Chuyên sâu</h2>
             </div>
         </div>
     </section>
