--- a/web_clone/nlpkhaisang/nlpkhaisang.html
+++ b/web_clone/nlpkhaisang/nlpkhaisang.html
@@ -32,12 +32,12 @@
             </div>
             <menu class="header_menu">
                 <ul>
-                    <li><a href="#home">Trang chủ</a></li>
-                    <li><a href="#">Giới thiệu</a></li>
-                    <li><a href="#">Các khóa học</a></li>
-                    <li><a href="#">Học online</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Liên hệ</a></li>
+                    <li><a href="#home">Trang chủ</a><div class="magic_line"></div></li>
+                    <li><a href="#">Giới thiệu</a><div class="magic_line"></div></li>
+                    <li><a href="#">Các khóa học</a><div class="magic_line"></div></li>
+                    <li><a href="#">Học online</a><div class="magic_line"></div></li>
+                    <li><a href="#">Blog</a><div class="magic_line"></div></li>
+                    <li><a href="#">Liên hệ</a><div class="magic_line"></div></li>
                 </ul>
             </menu>
         </div>
