--- a/00_index/index.html
+++ b/00_index/index.html
@@ -67,6 +67,17 @@
             <h2 class="item-container-header">Bài tập thực hành</h2>
 
             <div class="item">
+                <p class="date">06/03/2021</p>
+                <ul>
+                    <li>
+                        <a href="https://vungocvan-aptech.herokuapp.com/0306/tinhocsaoviet.html" target="_blank">
+                            <h3>Ôn tập HTML/CSS</h3>
+                            <p class="note">HTML/CSS</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="item">
                 <p class="date">27/02/2021</p>
                 <ul>
                     <li>
