--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="date">01/03/2021</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/web_clone/nlpkhaisang/nlpkhaisang.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/web_clone/nlpkhaisang/nlpkhaisang.html" target="_blank">
                             <h3>Clone - nlpkhaisang.com</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
@@ -32,7 +32,7 @@
                 <p class="date">18/02/2021</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0218/khotruyen-clone.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0218/khotruyen-clone.html" target="_blank">
                             <h3>Clone - khotruyen.net</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
@@ -43,7 +43,7 @@
                 <ul>
                     <p class="date">No date</p>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/web_clone/tonyrobbins/tonyrobbins_home.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/web_clone/tonyrobbins/tonyrobbins_home.html" target="_blank">
                             <h3>Clone - tonyrobbins.com</h3>
                             <p class="note">HTML/CSS, no JavaScript, responsive</p>
                         </a>
@@ -54,7 +54,7 @@
                 <ul>
                     <p class="date">No date</p>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/test_gioithieucongty/gioithieucongty.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/test_gioithieucongty/gioithieucongty.html" target="_blank">
                             <h3>Giới thiệu công ty</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
@@ -70,7 +70,7 @@
                 <p class="date">06/03/2021</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0306/tinhocsaoviet.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0306/tinhocsaoviet.html" target="_blank">
                             <h3>Ôn tập HTML/CSS</h3>
                             <p class="note">HTML/CSS</p>
                         </a>
@@ -81,7 +81,7 @@
                 <p class="date">27/02/2021</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0227/payment_form.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0227/payment_form.html" target="_blank">
                             <h3>JS - Payment Form</h3>
                             <p class="note">HTML/CSS/JS</p>
                         </a>
@@ -93,7 +93,7 @@
                 <p class="date">23/02/2021</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0223_js/bai3-event-phuongtrinhbacnhat.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0223_js/bai3-event-phuongtrinhbacnhat.html" target="_blank">
                             <h3>JS - Event -  PT bậc 1</h3>
                             <p class="note">HTML/CSS/JS</p>
                         </a>
@@ -104,19 +104,19 @@
                 <p class="date">18/02/2021</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0218/ex1-login.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0218/ex1-login.html" target="_blank">
                             <h3>Form - Login</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0218/ex2-library.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0218/ex2-library.html" target="_blank">
                             <h3>Form - Library</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
                     </li>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0218/khotruyen-clone.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0218/khotruyen-clone.html" target="_blank">
                             <h3>Clone - khotruyen.net</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
@@ -149,7 +149,7 @@
                 <p class="date">26/01/2021</p>
                 <ul>
                     <li>
-                        <a href="https://vungocvan-aptech.herokuapp.com/0126/gioithieu.html" target="_blank">
+                        <a href="https://vanvu25894.github.io/HTML/0126/gioithieu.html" target="_blank">
                             <h3>Giới thiệu bản thân</h3>
                             <p class="note">HTML/CSS, no JavaScript</p>
                         </a>
