--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     </div>
     <div class="footer">
-        <a href="https://github.com/vanvu25894/02-HTML" target="_blank">Github link</a>
+        <a href="https://github.com/vanvu25894/HTML" target="_blank">Github link</a>
     </div>
 </body>
 </html>
