--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
         <div class="item-container web-clone">
             <h2 class="item-container-header">Web Clone</h2>
 
+            <div class="item" id="web-clone-5">
+                <p class="date">05/05/2021</p>
+                <ul>
+                    <li>
+                        <a href="https://vanvu25894.github.io/HTML/0505_startbootstrap_freelancer_theme/index.html" target="_blank">
+                            <h3>Clone - startbootstrap.com/theme/freelancer</h3>
+                            <p class="note">HTML/CSS, no JavaScript</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
             <div class="item" id="web-clone-4">
                 <p class="date">01/03/2021</p>
                 <ul>
