--- a/00_index/index.html
+++ b/00_index/index.html
@@ -15,7 +15,7 @@
     <div class="section main-container">
         
         <div class="item-container web-clone">
-            <h2 class="item-container-header">Web Clone</h2>
+            <h2 class="item-container-header">Landing Clone</h2>
 
             <div class="item" id="web-clone-4">
                 <p class="date">01/03/2021</p>
