--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="00_index/css/index.css">
     <title>Aptech-VuNgocVan</title>
 </head>
+
 <body>
     <header>
         <div class="container text-center">
@@ -26,7 +29,8 @@
                         <h3 class="card-header">startbootstrap.com/theme/freelancer</h3>
                         <div class="card-body">
                             <p>HTML/CSS, <b>Responsive</b>.</p>
-                            <a href="./0505_startbootstrap_freelancer_theme/index.html" target="_blank" class="btn btn-success">Go to Page</a>
+                            <a href="./0505_startbootstrap_freelancer_theme/index.html" target="_blank"
+                                class="btn btn-success">Go to Page</a>
                         </div>
                         <div class="card-footer">
                             <p class="text-muted">05/05/2021</p>
@@ -56,14 +60,15 @@
                         <h3 class="card-header">nlpkhaisang.com</h3>
                         <div class="card-body">
                             <p>HTML/CSS, <b>Transitions slide-up without JS,</b> no Responsive.</p>
-                            <a href="./web_clone/nlpkhaisang/nlpkhaisang.html" target="_blank" class="btn btn-success">Go to Page</a>
+                            <a href="./web_clone/nlpkhaisang/nlpkhaisang.html" target="_blank"
+                                class="btn btn-success">Go to Page</a>
                         </div>
                         <div class="card-footer">
                             <p class="text-muted">01/03/2021</p>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="col-md-6 col-sm-12">
                     <div class="card mt-3 text-center">
                         <h3 class="card-header">khotruyen.net</h3>
@@ -84,21 +89,23 @@
                         <h3 class="card-header">tonyrobbins.com</h3>
                         <div class="card-body">
                             <p>HTML/CSS, <b>Responsive</b>.</p>
-                            <a href="./web_clone/tonyrobbins/tonyrobbins_home.html" target="_blank" class="btn btn-success">Go to Page</a>
+                            <a href="./web_clone/tonyrobbins/tonyrobbins_home.html" target="_blank"
+                                class="btn btn-success">Go to Page</a>
                         </div>
                         <div class="card-footer">
                             <p class="text-muted">No date</p>
                         </div>
                     </div>
                 </div>
-                
+
 
                 <div class="col-md-6 col-sm-12">
                     <div class="card mt-3 text-center">
                         <h3 class="card-header">Giới thiệu công ty</h3>
                         <div class="card-body">
                             <p>HTML/CSS, no Responsive.</p>
-                            <a href="./test_gioithieucongty/gioithieucongty.html" target="_blank" class="btn btn-success">Go to Page</a>
+                            <a href="./test_gioithieucongty/gioithieucongty.html" target="_blank"
+                                class="btn btn-success">Go to Page</a>
                         </div>
                         <div class="card-footer">
                             <p class="text-muted">No date</p>
@@ -111,25 +118,26 @@
             </div>
         </div>
     </section>
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4 col-sm-12 d-flex justify-content-center align-items-center mt-3">
-                <i class="fas fa-envelope-square"></i>
-                <a href="mailto:vanvu25894@gmail.com">vanvu25894@gmail.com</a>
-            </div>
-            <div class="col-md-4 col-sm-12 d-flex justify-content-center align-items-center mt-3">
-                <i class="fab fa-facebook-square"></i>
-                <a href="https://www.facebook.com/vanvu258" target="_blank">facebook.com/vanvu258</a>
-            </div>
-            <div class="col-md-4 col-sm-12 d-flex justify-content-center align-items-center mt-3">
-                <i class="fab fa-github-square"></i>
-                <a href="https://github.com/vanvu25894/HTML" target="_blank">github.com/vanvu25894</a>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center align-items-center mt-3">
+                    <i class="fas fa-envelope-square"></i>
+                    <a href="mailto:vanvu25894@gmail.com">vanvu25894@gmail.com</a>
+                </div>
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center align-items-center mt-3">
+                    <i class="fab fa-facebook-square"></i>
+                    <a href="https://www.facebook.com/vanvu258" target="_blank">facebook.com/vanvu258</a>
+                </div>
+                <div class="col-md-4 col-sm-12 d-flex justify-content-center align-items-center mt-3">
+                    <i class="fab fa-github-square"></i>
+                    <a href="https://github.com/vanvu25894/HTML" target="_blank">github.com/vanvu25894</a>
+                </div>
             </div>
         </div>
-    </div>
-</footer>
+    </footer>
 
 
 </body>
+
 </html>
