--- a/index.html
+++ b/index.html
@@ -15,14 +15,26 @@
     <header>
         <div class="container text-center">
             <p>Vũ Ngọc Văn</p>
-            <h1>Static Landing Clones</h1>
-            <p>(Pure CSS)</p>
+            <h1>Practice Excercises</h1>
         </div>
     </header>
     <section>
         <div class="container">
             <div class="row">
 
+                <div class="col-md-6 col-sm-12">
+                    <div class="card mt-3 text-center">
+                        <h3 class="card-header">PHP/MySQL</h3>
+                        <div class="card-body">
+                            <p>For admin: admin/123456</p>
+                            <a href="https://project-shrek-juices.herokuapp.com/" target="_blank" class="btn btn-success">Go to
+                                Page</a>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted">No date (Est 3 weeks)</p>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="col-md-6 col-sm-12">
                     <div class="card mt-3 text-center">
