--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <div class="card mt-3 text-center">
                         <h3 class="card-header">PHP/MySQL</h3>
                         <div class="card-body">
-                            <p>For admin: admin/123456</p>
+                            <p>For admin: admin/vanvu258</p>
                             <a href="https://project-shrek-juices.herokuapp.com/" target="_blank" class="btn btn-success">Go to
                                 Page</a>
                         </div>
